--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^2.12"
+        "livewire/livewire": "^2.12",
+        "maatwebsite/excel": "*",
+        "psr/simple-cache": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
