--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
         "maatwebsite/excel": "^3.1",
+        "pragmarx/google2fa-laravel": "^2.1",
         "psr/simple-cache": "^1.0"
     },
     "require-dev": {
@@ -32,7 +33,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "App\\Traits\\": "app/Traits/"
         }
     },
     "autoload-dev": {
