--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,8 @@
 /.github export-ignore
 CHANGELOG.md export-ignore
 .styleci.yml export-ignore
+
+*.html linguist-detectable=false
+*.css linguist-detectable=false
+*.pug linguist-detectable=false
+*.scss linguist-detectable=false
