--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DB_DATABASE=app2
 DB_USERNAME=root
 DB_PASSWORD=
 
+FIREBASE_CREDENTIALS=""
+FIREBASE_DATABASE_URL=""
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
