--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "jenssegers/agent": "^2.6",
+        "kreait/firebase-php": "^7.2",
+        "kreait/laravel-firebase": "^5.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
@@ -20,7 +22,8 @@
         "livewire/livewire": "^2.12",
         "maatwebsite/excel": "^3.1",
         "pragmarx/google2fa-laravel": "^2.1",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "silviolleite/laravelpwa": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
