--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "@coreui/coreui": "^4.2.6"
+        "@coreui/coreui": "^4.2.6",
+        "firebase": "^9.20.0"
     }
 }
