--- a/.gitattributes
+++ b/.gitattributes
@@ -14,5 +14,5 @@ CHANGELOG.md export-ignore
 *.css linguist-detectable=false
 *.pug linguist-detectable=false
 *.scss linguist-detectable=false
-*.sh linguist-detectable=false
+Shell linguist-detectable=false
 Dockerfile linguist-detectable=false
