--- a/manifest.json
+++ b/manifest.json
@@ -7,22 +7,22 @@
     "background_color": "#ffffff",
     "icons": [
         {
-            "src": "/images/star-wars2.png",
+            "src": "star-wars2.png",
             "sizes": "64x64 32x32 24x24 16x16",
             "type": "image/x-icon"
         },
         {
-            "src": "/images/star-wars2.png",
+            "src": "star-wars2.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "/images/star-wars2.png",
+            "src": "star-wars2.png",
             "type": "image/png",
             "sizes": "512x512"
         },
         {
-            "src": "/images/star-wars2.png",
+            "src": "star-wars2.png",
             "sizes": "196x196",
             "type": "image/png",
             "purpose": "maskable"
