[Toastr] Implement Toastr flash messages

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "maatwebsite/excel": "^3.1",
         "pragmarx/google2fa-laravel": "^2.1",
         "psr/simple-cache": "^1.0",
-        "silviolleite/laravelpwa": "^2.0"
+        "silviolleite/laravelpwa": "^2.0",
+        "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
