--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "maatwebsite/excel": "^3.1",
         "pragmarx/google2fa-laravel": "^2.1",
         "psr/simple-cache": "^1.0",
+        "pusher/pusher-php-server": "^7.2",
         "silviolleite/laravelpwa": "^2.0",
         "yoeunes/toastr": "^2.3"
     },
