[Notifications] Trying to implment real-time notifications

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     },
     "dependencies": {
         "@coreui/coreui": "^4.2.6",
-        "firebase": "^9.20.0"
+        "firebase": "^9.20.0",
+        "laravel-echo": "^1.15.1",
+        "pusher-js": "^8.0.2"
     }
 }
